kubernetes/network/edge-api-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: edge-api-policy
  namespace: edge-pune
  labels:
    app.kubernetes.io/part-of: kubesentinel
    kubesentinel.io/policy: edge-api-traffic
spec:
  podSelector:
    matchLabels:
      app: edge-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 8000
      from:
        - podSelector: {}
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kubesentinel-system
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kubesentinel-system
          podSelector:
            matchLabels:
              app: redis
      ports:
        - protocol: TCP
          port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: edge-api-policy
  namespace: edge-mumbai
  labels:
    app.kubernetes.io/part-of: kubesentinel
    kubesentinel.io/policy: edge-api-traffic
spec:
  podSelector:
    matchLabels:
      app: edge-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 8000
      from:
        - podSelector: {}
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kubesentinel-system
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kubesentinel-system
          podSelector:
            matchLabels:
              app: redis
      ports:
        - protocol: TCP
          port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: edge-api-policy
  namespace: edge-bangalore
  labels:
    app.kubernetes.io/part-of: kubesentinel
    kubesentinel.io/policy: edge-api-traffic
spec:
  podSelector:
    matchLabels:
      app: edge-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 8000
      from:
        - podSelector: {}
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kubesentinel-system
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kubesentinel-system
          podSelector:
            matchLabels:
              app: redis
      ports:
        - protocol: TCP
          port: 6379
