kubernetes/network/redis-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-access
  namespace: kubesentinel-system
  labels:
    app.kubernetes.io/part-of: kubesentinel
    kubesentinel.io/policy: redis-access
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - edge-pune
                  - edge-mumbai
                  - edge-bangalore
          podSelector:
            matchLabels:
              app: edge-api
        - podSelector:
            matchLabels:
              app: edge-worker
        - podSelector:
            matchLabels:
              app: redis-bootstrap
      ports:
        - protocol: TCP
          port: 6379
  egress: []
